language/move-lang/tests/move_check/parser/use_module_member_invalid_missing_semicolon.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_module_member_invalid_missing_semicolon.move:5:1
  │
5 │ }
  │ ^
  │ │
  │ Unexpected '}'
  │ Expected ';'

